# cancer-sim

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  description.md  description.tex  pyproject.toml
latex/: generate_figures.py  main.tex  refs.bib  results.json  results_experiments.json  run_experiments.py
latex/figures/: neural_corrector.pt  ode_corrector.pt  pinn_fast_rollout.pt
src/: results_experiments.json  run_experiments.py
src/assimilation/: __init__.py  abc_sampler.py  var4d_solver.py
src/core/: __init__.py  protocols.py  simulator.py  state.py
src/engines/: __init__.py  base.py  ode_engine.py  pde_engine.py  sho_engine.py
src/engines/neural/: __init__.py  mlp_engine.py  node_engine.py  pinn_engine.py  supernet_engine.py  trajectory_engine.py
src/methods/: __init__.py  galerkin.py  moment_closure.py  neural_corrector.py  ode.py  ode_corrector.py  pde.py  pinn.py  shared.py
src/model/: simulation.py
src/pde/: main.py  sim_engine.py  sim_hooks.py
src/pde-simulation/: main.py
src/scripts/: __init__.py  run_benchmarks.py  run_comparison.py  run_ode_viz.py  run_pde_viz.py  run_sho_viz.py  run_training.py  train_pinn.py
src/simulation/: main.py  sim_config.py  sim_engine.py  sim_hooks.py
src/training/: __init__.py  generate_data.py  train_mlp.py  train_neural_corrector.py  train_node.py  train_ode_corrector.py  train_pinn.py  train_pinn_fast_rollout.py  train_supernet.py  train_trajectory.py
src/visualize/: __init__.py  hooks.py  style.py
