[project]
name = "cancer-sim"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "imageio>=2.37.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pre-commit>=4.5.1",
    "pydantic>=2.12.5",
    "salib>=1.5.2",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "torchdiffeq>=0.2.5",
]

[tool.ruff.lint]
select = ["F", "I", "B", "UP"]
